--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,10 +5,30 @@
 html {
   max-width: 100vw;
   scroll-behavior: smooth;
+  background-color: black;
 }
 
 body {
   max-width: 100vw;
   overflow-x: hidden;
   background-color: black;
+}
+
+/**
+  * Custom Scrollbar
+  */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
 }
